# lejurobot

./: .gitignore  README.md  pyproject.toml  train.sh  train_multigpu.sh
lejurobot/: constants.py  logger.py
lejurobot/configs/: train.py
lejurobot/datasets/: factory.py  lejurobot_dataset.py  utils.py
lejurobot/policies/: factory.py
lejurobot/scripts/: train_val.py  train_val_multigpu.py
lejurobot/train/: __init__.py  strategies_ckpt.py  trainer.py
utils/: add_branch_to_dataset.py  download_dataset.py  upload_dataset.py
