[project]
name = "lejurobot"
version = "0.1.0"
description = "LeJurobot Real-I challenge"
authors = [
    {name = "Leonardo", email = "leonardo.perez@nonhuman.site"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["robotics", "ai", "machine-learning", "physical-intelligence", "lejurobot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

# Primary dependencies
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "opencv-python>=4.8.0",
    "pyopengl>=3.1.0",
    "pillow>=9.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    # LeRobot from GitHub
    "lerobot @ git+https://github.com/huggingface/lerobot.git",
    "piper_sdk @ git+https://github.com/agilexrobotics/piper_sdk.git",
    "rich>=13.0.0",
    "Faker>=37.12.0", # Dummy
    "PyYAML>=6.0.0",
    "omegaconf>=2.3.0",
    "huggingface-hub>=0.34.2,<0.36.0",
    "numpy>=1.24.0,<2.3.0",
    "feetech-servo-sdk>=1.0.0",
    "draccus>=0.10.0",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

memer = [
    "qwen-vl-utils==0.0.14"
]

transformers-git = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "huggingface-hub[hf-transfer,cli]>=1.0.0rc6",
    "bitsandbytes==0.48.2",
    "accelerate==1.11.0",
    "flash-attn==2.8.3"
]

autoannotator = [
    "google-genai==1.45.0",
    "moviepy==2.2.1",
    "dotenv"
]

pi = ["transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi"]

thor=[
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi",
    "datasets>=2.12.0",
    "opencv-python>=4.8.0",
    "pyopengl>=3.1.0",
    "pillow>=9.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    # LeRobot from GitHub
    "lerobot @ git+https://github.com/huggingface/lerobot.git",
    "piper_sdk @ git+https://github.com/agilexrobotics/piper_sdk.git",
    "rich>=13.0.0",
    "Faker>=37.12.0", # Dummy
    "PyYAML>=6.0.0",
    "omegaconf>=2.3.0",
    "huggingface-hub>=0.34.2,<0.36.0",
    "numpy>=1.24.0,<2.3.0",
    "feetech-servo-sdk>=1.0.0",
    "draccus>=0.10.0",
]


# Projects dependencies
mantra = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "langchain-google-genai>=2.0.9",
    "langchain>=0.3.18",
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "moviepy>=2.2.1",
    "langchain-openai>=1.0.3",
]

# Project URLs
[project.urls]
homepage = "https://github.com/NONHUMAN-SITE/XHUMAN"
repository = "https://github.com/NONHUMAN-SITE/XHUMAN"
issues = "https://github.com/NONHUMAN-SITE/XHUMAN/issues"
documentation = "https://github.com/NONHUMAN-SITE/XHUMAN#readme"

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["xhuman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=xhuman",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Package discovery
[tool.setuptools.packages.find]
include = ["xhuman*"]
exclude = ["images*", "tests*", "scripts*"]

# Build system
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
